@@ -486,6 +486,8 @@
       deprecated only via \env{_R_CHECK_AS_DATA_FRAME_EXPLICIT_METHOD_} and
       in \command{R CMD check --as-cran} are formally deprecated now in
       favour of calling \code{as.data.frame()} or \code{as.data.frame.vector()}.
+      The deprecation \dQuote{check} now works also when \code{as.data.frame()}
+      is S4 generic thanks to Ivan Krylov.
 
       \item The default method for the directional comparison operators
       \code{<}, \code{>}, \code{<=}, and \code{>=} now signals an error
